# softbotEvolution

./: README.md  README.txt
base/: README.txt
base/hyperneat/: BUILD_CLEAN.sh  BUILD_EVERYTHING.sh  BUILD_EVERYTHING_NICK_DESKTOP.sh
base/hyperneat/HyperNEAT/: cmake_install.cmake
base/hyperneat/HyperNEAT/Hypercube_NEAT/: CMakeLists.txt  Makefile
base/hyperneat/HyperNEAT/Hypercube_NEAT/include/: HCUBE_EvaluationSet.h  HCUBE_ExperimentRun.h  HCUBE_NodeAvatar.h  HCUBE_Vector2.h
base/hyperneat/HyperNEAT/Hypercube_NEAT/include/Experiments/: HCUBE_BitMirroringV2Experiment.h  HCUBE_CheckersExperiment.h  HCUBE_Experiment.h  HCUBE_FindClusterBiasExperiment.h  HCUBE_FindClusterExperiment.h  HCUBE_LegSwingExperiment-NEAT.h  HCUBE_LegSwingExperiment-Pneat.h  HCUBE_Retina-FTNEAT.h  HCUBE_RetinaExperiment.h  HCUBE_SoftbotsExperiment.h  HCUBE_SpiderRobotExperiment.h  HCUBE_TargetWeightsExperiment.h  HCUBE_TargetWeightsNoGeomExperiment.h
base/hyperneat/HyperNEAT/Hypercube_NEAT/src/: HCUBE_Defines.cpp  HCUBE_EvaluationPanel.cpp  HCUBE_NetworkPanel.cpp  HCUBE_NodeAvatar.cpp
base/hyperneat/HyperNEAT/Hypercube_NEAT/src/Experiments/: HCUBE_BitMirroringV2NoGeomExperiment.cpp  HCUBE_CheckersCommon.cpp  HCUBE_CheckersExperiment.cpp  HCUBE_CheckersExperimentNoGeom.cpp  HCUBE_CheckersExperimentOriginalFogel.cpp  HCUBE_FindClusterNoGeomExperiment.cpp  HCUBE_LegSwingExperiment-Pneat.cpp  HCUBE_LegSwingExperiment.cpp  HCUBE_SoftbotsExperiment.cpp  HCUBE_SpiderRobotExperiment.cpp
base/hyperneat/HyperNEAT/Hypercube_NEAT/src/hiller/: Array3D.h  DM_FEA.h  DM_FRegion.cpp  DM_FRegion.h  DigitalMatter.cpp  Mesh.cpp  Mesh.h  OpenGL.cpp  XML_Rip.cpp  XML_Rip.h
base/hyperneat/HyperNEAT/NEAT/: CMakeLists.txt  cmake_install.cmake
base/hyperneat/HyperNEAT/NEAT/include/: NEAT_GeneticIndividual.h  NEAT_GeneticSpecies.h  NEAT_Globals.h
base/hyperneat/HyperNEAT/NEAT/src/: NEAT_GeneticPopulation.cpp  NEAT_GeneticSpecies.cpp  NEAT_Globals.cpp
base/hyperneat/tinyxmldll/: Makefile  cmake_install.cmake
base/hyperneat/zlib/: CMakeCache.txt  CMakeLists.txt  Makefile
base/voxcad-code-2014/.svn/: entries
base/voxcad-code-2014/GeneratedFiles/: ui_VoxCad.h  ui_vBCs.h  ui_vFEAInfo.h  ui_vPalette.h  ui_vTensile.h  ui_vWorkSpace.h
base/voxcad-code-2014/GeneratedFiles/release/: moc_Dlg_3DBrush.cpp  moc_Dlg_Palette.cpp  moc_Dlg_Physics.cpp  moc_Dlg_StructureEditor.cpp  moc_Dlg_Tensile.cpp  moc_Dlg_VideoCapture.cpp  moc_Dlg_Workspace.cpp  moc_QSimplePlot.cpp  moc_QThreadWrap.cpp  moc_QVX_Interfaces.cpp  moc_VoxCad.cpp
base/voxcad-code-2014/QTUtils/.svn/: entries
base/voxcad-code-2014/VoxCad/: Dlg_Physics.cpp  VoxCad.ui  vPhysics.ui
base/voxcad-code-2014/VoxCad/.svn/text-base/: Dlg_Physics.h.svn-base
base/voxcad-code-2014/VoxCad/Icons/.svn/: entries
base/voxcad-code-2014/Voxelyze/: VXS_SimGLView.cpp  VX_MeshUtil.cpp  VX_Object.cpp  VX_Sim.cpp  VX_Sim.h  VX_SimGA.cpp
base/voxcad-code-2014/Voxelyze/.svn/: all-wcprops
base/voxcad-code-2014/Voxelyze/Utils/: GL_Utils.cpp
base/voxcad-code-2014/Voxelyze_base/: VX_Voxel.h
base/voxcad-code-2014/Voxelyze_base/.svn/text-base/: VXS_SimGLView.h.svn-base  VXS_Voxel.cpp.svn-base  VXS_Voxel.h.svn-base  VX_MeshUtil.cpp.svn-base  VX_Object.h.svn-base  VX_Sim.h.svn-base
base/voxcad-code-2014/Voxelyze_base/Utils/.svn/: all-wcprops
base/voxelyzeMain/: Example_1.vxa  Example_2.vxa  Example_3.vxa  main.cpp  main2.cpp  voxelyze
hyperneat/: .gitignore  BUILD_EVERYTHING.sh
hyperneat/HyperNEAT/: CMakeCache.txt  CMakeLists.txt  Makefile
hyperneat/HyperNEAT/Hypercube_NEAT/: CMakeLists.txt  cmake_install.cmake
hyperneat/HyperNEAT/Hypercube_NEAT/include/: HCUBE_Boost.h  HCUBE_Defines.h  HCUBE_MPIEvaluationSet.h  HCUBE_ODE.h
hyperneat/HyperNEAT/Hypercube_NEAT/include/Experiments/: HCUBE_BitMirroringV2NoGeomExperiment.h  HCUBE_CheckersCommon.h  HCUBE_CheckersExperimentNoGeom.h  HCUBE_CheckersExperimentOriginalFogel.h  HCUBE_FindClusterBPExperiment.h  HCUBE_FindClusterNoGeomExperiment.h  HCUBE_LegSwingExperiment.h  HCUBE_PicBreederExperimentUCF.h  HCUBE_ShapesExperiment.h
hyperneat/HyperNEAT/Hypercube_NEAT/src/: HCUBE_EvaluationSet.cpp  HCUBE_ExperimentRun.cpp  HCUBE_MPIEvaluationSet.cpp  HCUBE_MPIExperimentRun.cpp  HCUBE_NeuralNetworkPanel.cpp  HCUBE_ODE.cpp  main.cpp  mpimain.cpp
hyperneat/HyperNEAT/Hypercube_NEAT/src/Experiments/: HCUBE_Retina-FTNEAT.cpp  (+9 more)
hyperneat/HyperNEAT/NEAT/: CMakeLists.txt  Makefile
hyperneat/HyperNEAT/NEAT/include/: NEAT_GeneticIndividual.h  NEAT_GeneticPopulation.h
hyperneat/HyperNEAT/NEAT/src/: NEAT_FastNetwork.cpp  NEAT_GeneticIndividual.cpp  NEAT_GeneticNodeGene.cpp  NEAT_NetworkNode.cpp
hyperneat/JGTL/include/: JGTL_LocatedException.h
hyperneat/tinyxmldll/: CMakeCache.txt  CMakeLists.txt
hyperneat/zlib/: cmake_install.cmake
voxcad-code-2014/: Makefile
voxcad-code-2014/GeneratedFiles/: qrc_VoxCad.cpp  ui_vPhysics.h  ui_vPrimEdit.h  ui_vStructureEditor.h  ui_vVideoGen.h  ui_vVoxInfo.h
voxcad-code-2014/GeneratedFiles/release/: moc_Dlg_BCs.cpp  moc_Dlg_EditPrim.cpp  moc_Dlg_FEAInfo.cpp  moc_Dlg_VoxInfo.cpp  moc_QOpenGL.cpp  moc_QVX_Edit.cpp  moc_QVX_TensileTest.cpp
voxcad-code-2014/Installer/.svn/: dir-prop-base  entries
voxcad-code-2014/Installer/.svn/text-base/: VoxCad099.tar.gz.svn-base
voxcad-code-2014/QTUtils/.svn/text-base/: QOpenGL.cpp.svn-base
voxcad-code-2014/VoxCad/: QVX_Interface.cpp
voxcad-code-2014/VoxCad/.svn/: dir-prop-base  entries
voxcad-code-2014/VoxCad/.svn/text-base/: QVX_Interfaces.h.svn-base
voxcad-code-2014/Voxelyze/: Makefile  VX_Environment.h  VX_MeshUtil.h  VX_SimGA.h
voxcad-code-2014/Voxelyze/.svn/: dir-prop-base
voxcad-code-2014/Voxelyze/.svn/text-base/: VX_Object.cpp.svn-base  VX_Sim.cpp.svn-base  VX_SimGA.cpp.svn-base
voxcad-code-2014/Voxelyze/Utils/: Mesh.cpp
voxcad-code-2014/Voxelyze/Utils/.svn/: entries
voxcad-code-2014/Voxelyze_base/: VX_Environment.cpp
voxcad-code-2014/Voxelyze_base/.svn/: entries
voxcad-code-2014/Voxelyze_base/Utils/: Mesh.h
voxcad-code-2014/icons/.svn/: entries
voxelyzeMain/: Change_Me_output.xml  Example_2.vxa  softbotsOutput.xml
(+8 files in other folders)
